ola-parser/src/testdata/syntaxTests/freeFunctions/free_function_visibility.sol
fn fun1()  { }
fn fun2() internal { }
// ----
// SyntaxError 4126: (0-26): Free functions cannot have visibility.
// SyntaxError 4126: (27-55): Free functions cannot have visibility.
